--- a/app/views/user/work/published.html
+++ b/app/views/user/work/published.html
@@ -8,7 +8,7 @@
   		<div class="u-separator"></div>
   		<div class="work-collection-card u-margin-top-40">
   			<div class="work-collection-card-img">
-  				<img src="{{work.photo|addFilter('w_300,q_80,c_limit')}}">
+  				<img src="{{work.photo|addFilter('w_300,c_limit')}}">
   			</div>
   			<div class="work-collection-card-data">
   				<p class="work-collection-card-title">{{work.name}}</p>
