add collections to old users

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -26,14 +26,14 @@
 {
 	border: none;
 	cursor: pointer;
-	filter: alpha(opacity=0);
-	height: 44px;
-	left: 80px;
+	/*height: 44px;*/
+	/*left: 80px;*/
 	opacity: 0;
 	padding: 0;
 	position: absolute;
 	top: 0;
-	width: 275px;
+	border: 1px solid red;
+	/*width: 275px;*/
 }
 	</style>
 </head>
