change view to follow button

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -126,7 +126,7 @@
 		  		<div class="artist-card-info">
 		  			<img src="<%=photo%>">
 		  			<div>
-		  				<p class="name uppercase"><%=firstname%> <%=lastname%></p>
+		  				<p class="name uppercase"><%=fullname %></p>
 		  				<p class="city"><%=city%>, <%=country%></p>
 		  				<p class="stats"><i class="bi_ecommerce-diamon"></i> <%=numOfFollowers%></p>
 		  			</div>
