--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -29,7 +29,7 @@
 						<img src="{{profile.photo}}">
 					</div>
 					<div>
-						<p class="name">{{profile.firstname}}</p>
+						<p class="name">{{profile.fullname}}</p>
 						<p class="city">{{profile.city}}, {{profile.country}}</p>
 						{% if !owner %}
 							{% if profile.following %}
