oveoverflow elippsis in artist card name

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -293,6 +293,8 @@ body
 		display flex
 		align-items center
 		padding 10px
+		>div
+			flex 1
 		img
 			height 50px
 			width 50px
@@ -302,6 +304,7 @@ body
 			font-family 'Montserrat', sans-serif
 			font-size 10px
 			color #666
+			overflow ellipsis
 			&:not(:last-child)
 				padding-bottom 5px
 			i
