--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -831,11 +831,13 @@ body
 	background-position center center
 	position relative
 	overflow hidden
+	background rgba(black, .15)
 	.am-Profile-banner-img
 		position absolute
 		top 50%
 		transform translate(0, -50%)
 		z-index: -1;
+		width: 100%;
 	.edit
 		position absolute
 		bottom 20px
@@ -865,6 +867,7 @@ body
 	.img
 		margin-right 20px
 		position relative
+		min-width 100px
 		i
 			position absolute
 			bottom 0
