add preload in change profile cover

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -851,6 +851,8 @@ body
 		right 20px
 		color white
 		font-size 1.5rem
+		.prelaod
+			animation 1.5s load infinite
 		i
 			cursor pointer
 			margin-left 10px
