add description in profile

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -78,6 +78,14 @@
 
 	<div class="discover-content portfolio-wrapper grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'portfolio' %} hide {% endif %}">
+		<div class="grid-60">
+			<p class="profile-title">Sobre el artista</p>
+			<p class="profile-desc">Unlike pop-culture’s current obsession with bleak, heavy drama (<i>Game Of Thrones, Breaking Bad,</i> we’re talking to you). Lo que no quiere decir que tengas que hacer más de lo que debas ni conocer lo que no te corresponda. Exploración es mi ultima misión.</p>
+		</div>
+		<div class="grid-100">
+			<p class="profile-title u-margin-top-30">Mis últimos trabajos</p>
+			<div class="u-separator"></div>
+		</div>
 		<div class="grid-100 grid-parent">
       <div class="grid portfolio-container work-layout-discover">
 				<div class="grid-sizer"></div>
