--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -911,6 +911,7 @@ body
 		padding 25px 0
 		width 120px
 		min-width: 110px;
+		cursor pointer
 		p
 			font-family 'Montserrat', sans-serif
 			font-size 10px
@@ -1194,6 +1195,25 @@ body
 		padding 30px 80px 40px 80px
 
 
+
+
+/*------------------------------------*
+	$ PROFILE
+*------------------------------------*/
+.profile-title
+	font-family 'Montserrat', sans-serif
+	font-size 21px
+	font-weight bold
+	color #333
+	padding 20px 0 10px 0
+
+.profile-desc
+	font-family: 'PT Serif', serif;
+	font-size 16px
+	color #959ea0
+	line-height 1.25
+	i
+		font-style italic
 
 /*------------------------------------*
 	$ PROFILE
