featured and delete button in admin works

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -110,6 +110,8 @@
 	<script type="text/template" id="template-work">
 		<div class="grid-item">
 			<div class="work-card">
+			<div class="featured disabled">AM</div>
+			<div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
 				<a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
 					<img src="<%= addFilter(photo, 'w_300') %>">
 				</a>
@@ -219,5 +221,3 @@
 	{% block scripts %} {% endblock %}
 </body>
 </html>
-
-<!-- <div class="featured">AM</div> -->
