--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -428,6 +428,7 @@ body
 				font-size 1.25em
 
 
+
 .featured
 	position absolute
 	top -10px
@@ -439,10 +440,17 @@ body
 	color white
 	padding 4px 11px
 	border-radius 3px
+	cursor pointer
 	&.disabled
 		background #aaa
 
-
+.delete
+	position absolute
+	bottom 10px
+	right 5px
+	color white
+	// background rgba(black, .5)
+	cursor pointer
 
 .footer
 	padding 40px 0
