add edit button in works

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -110,8 +110,9 @@
 	<script type="text/template" id="template-work">
 		<div class="grid-item">
 			<div class="work-card">
-			<div class="featured disabled">AM</div>
-			<div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
+				<div class="featured disabled">AM</div>
+				<div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
+				<div class="edit"><i class="fa fa-pencil-square-o"></i></div>
 				<a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
 					<img src="<%= addFilter(photo, 'w_300') %>">
 				</a>
