--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -428,7 +428,6 @@ body
 				font-size 1.25em
 
 
-
 .featured
 	position absolute
 	top -10px
@@ -450,6 +449,14 @@ body
 	right 5px
 	color white
 	// background rgba(black, .5)
+	cursor pointer
+
+.edit
+	font-size 1.15em
+	position absolute
+	top 10px
+	right 5px
+	color white
 	cursor pointer
 
 .footer
