--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -32,7 +32,6 @@
 	padding: 0;
 	position: absolute;
 	top: 0;
-	border: 1px solid red;
 	/*width: 275px;*/
 }
 	</style>
@@ -110,9 +109,13 @@
 	<script type="text/template" id="template-work">
 		<div class="grid-item">
 			<div class="work-card">
-				<div class="featured disabled">AM</div>
-				<div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
-				<div class="edit"><i class="fa fa-pencil-square-o"></i></div>
+				<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
+				<% if (owner || (viewer && viewer.isAdmin)) { %>
+					<div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
+				<% } %>
+				<% if (owner) { %>
+					<div class="edit"><i class="fa fa-pencil-square-o"></i></div>
+				<% } %>
 				<a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
 					<img src="<%= addFilter(photo, 'w_300') %>">
 				</a>
