--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -83,7 +83,11 @@
 			<p class="profile-desc">Unlike pop-culture’s current obsession with bleak, heavy drama (<i>Game Of Thrones, Breaking Bad,</i> we’re talking to you). Lo que no quiere decir que tengas que hacer más de lo que debas ni conocer lo que no te corresponda. Exploración es mi ultima misión.</p>
 		</div>
 		<div class="grid-100">
-			<p class="profile-title u-margin-top-30">Mis últimos trabajos</p>
+			<p class="profile-title u-margin-top-30">
+				<span>Mis últimos trabajos</span>
+				<span class="profile-title-edit"><i class="fa fa-pencil-square-o"></i></span>
+				<span class="profile-title-cancel"><i class="fa fa-ban"></i></span>
+			</p>
 			<div class="u-separator"></div>
 		</div>
 		<div class="grid-100 grid-parent">
