add  am ta gin cards

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -346,7 +346,7 @@ body
 *------------------------------------*/
 .collection-card
 	border solid 1px #ddd
-	// position relative
+	position relative
 	&-stats
 		padding 12px
 		p
