--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -85,8 +85,8 @@
 		<div class="grid-100">
 			<p class="profile-title u-margin-top-30">
 				<span>Mis últimos trabajos</span>
-				<span class="profile-title-edit"><i class="fa fa-pencil-square-o"></i></span>
-				<span class="profile-title-cancel"><i class="fa fa-ban"></i></span>
+				<!-- <span class="profile-title-edit"><i class="fa fa-pencil-square-o"></i></span>
+				<span class="profile-title-cancel"><i class="fa fa-ban"></i></span> -->
 			</p>
 			<div class="u-separator"></div>
 		</div>
