add preload in discovers

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1658,6 +1658,14 @@ body
 .discover-content
 	min-height 850px
 
+.am-More-preload
+	color #ddd
+	text-align center
+	font-size 1.5em
+	i
+		animation 1.5s load infinite
+
+
 /*------------------------------------*
 	$ WORK LAYOUT DISCOVER
 *------------------------------------*/
@@ -1698,6 +1706,9 @@ body
 					width 25%
 
 			.am-More-button
+				margin-left 20%
+
+			.am-More-preload
 				margin-left 20%
 
 
@@ -2020,7 +2031,7 @@ body
 			.text
 				color #4000ff
 
-.action
+// .action
 	// position relative
 	// .actions-box
 	// 	display none
