--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -61,9 +61,12 @@
 		</div>
 	</div>
 	<div class="grid-100 u-margin-top-10">
-		<!-- <ul class="am-Pagination" style="text-align:right;">
-		</ul> -->
+		<div class="am-More-preload"><i class="fa fa-spinner"></i></div>
 	</div>
+<!-- 	<div class="grid-100 u-margin-top-10">
+		<ul class="am-Pagination" style="text-align:right;">
+		</ul>
+	</div> -->
 </div>
 
 {% endblock %}
