--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -60,6 +60,9 @@
 			<div class="grid-sizer"></div>
 		</div>
 	</div>
+	<div class="grid-100 u-margin-top-10">
+		<div class="am-More-preload"><i class="fa fa-spinner"></i></div>
+	</div>
 </div>
 {% endblock %}
 
