--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -109,13 +109,23 @@
 	<script type="text/template" id="template-work">
 		<div class="grid-item">
 			<div class="work-card">
-				<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
+
+				<% if (viewer && viewer.isAdmin) { %>
+					<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
+				<% } else { %>
+					<% if (featured) { %>
+						<div class="featured">AM</div>
+					<% } %>
+				<% } %>
+
 				<% if (owner || (viewer && viewer.isAdmin)) { %>
 					<div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
 				<% } %>
+
 				<% if (owner) { %>
 					<div class="edit"><i class="fa fa-pencil-square-o"></i></div>
 				<% } %>
+
 				<a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
 					<img src="<%= addFilter(photo, 'w_300') %>">
 				</a>
@@ -126,9 +136,15 @@
 	<script type="text/template" id="template-user">
 		<div class="grid-item">
 	  	<div class="artist-card">
-				<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
-				<% if(featured) { %>
-				<% } %>
+
+	  		<% if (viewer && viewer.isAdmin) { %>
+	  			<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
+	  		<% } else { %>
+	  			<% if (featured) { %>
+	  				<div class="featured">AM</div>
+	  			<% } %>
+	  		<% } %>
+
 				<a href="/user/<%=username%>">
 		  		<div class="artist-card-info">
 		  			<img src="<%=photo%>">
