add preloaders in upload an sell

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1534,6 +1534,9 @@ body
 		color white
 		padding 15px 20px
 		cursor pointer
+		.load
+			font-size 1.2em
+			animation 1.5s load infinite
 		&[data-color="blue"]
 			background #277cea
 		&[data-color="green"]
