--- a/app/views/user/work/add-edit.html
+++ b/app/views/user/work/add-edit.html
@@ -70,6 +70,9 @@
 					ACTUALIZAR OBRA
 					{% endif %}
 				</button>
+				<button class="button u-margin-top-30" data-color="blue">
+					<i class="load fa fa-spinner"></i>
+				</button>
 			</div>
 		</form>
 	</div>
