add modals in social actions

--- a/app/styles/utilities.styl
+++ b/app/styles/utilities.styl
@@ -31,6 +31,11 @@
 .u-padding-top-40
 	padding-top 40px
 
+.u-margin-bottom-20
+	margin-bottom 20px
+.u-margin-bottom-40
+	margin-bottom 40px
+
 .u-padding-bottom-4
 	padding-bottom 4px
 .u-padding-bottom-7
