--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -62,6 +62,11 @@
 	</div>
 	<div class="grid-100 u-margin-top-10">
 		<div class="am-More-preload"><i class="fa fa-spinner"></i></div>
+		<div class="am-search-result">
+			No se encontraron resultados para: <span class="am-report-link" href="">asgsdf</span>
+			<br><br>
+			<a href="/works/category/all/page-1" class="am-report-link blue" href="">Volver a todas las obras</a>
+		</div>
 	</div>
 </div>
 {% endblock %}
