--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -60,6 +60,9 @@
 								<button class="color-blue bg-gray">AÑADIR A LA COLECCIÓN</button>
 							</a>
 							<button class="u-margin-top-10">+ SEGUIR</button>
+							<button class="u-margin-top-10">
+								<i class="load fa fa-spinner"></i>
+							</button>
 							<button class="following u-margin-top-10">
 								<i class="fa fa-check-circle"></i>&nbsp;SIGUIENDO
 							</button>
@@ -321,6 +324,9 @@
 			<div class="u-separator u-margin-top-20"></div>
 			<div class="buttons u-margin-top-20">
 				<button class="wd-auto bg-blue color-white save-collections">GUARDAR</button>
+				<button class="wd-auto bg-blue color-white save-collections">
+					<i class="load fa fa-spinner"></i>
+				</button>
 			</div>
 		</div>
 	</div>
