add emppty messages in profile

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1267,6 +1267,19 @@ body
 	i
 		font-style italic
 
+.empty-profile-text
+	color: #9b9b9b;
+	font-family: 'Montserrat',sans-serif;
+	font-size: 18px;
+	text-align: center;
+	max-width 500px
+	margin auto
+	a
+		font-size: 16px;
+		font-size em
+		color #4000ff
+
+
 /*------------------------------------*
 	$ PROFILE
 *------------------------------------*/
