--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -91,6 +91,9 @@
 			<div class="u-separator"></div>
 		</div>
 		<div class="grid-100 grid-parent">
+			<p class="empty-profile-text u-margin-top-30">Un no tienes ninguna obra <br><br>
+				<a href="/users/specialty/all/page-1">Sube tu primera obra</a>
+			</p>
       <div class="grid portfolio-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
@@ -100,6 +103,9 @@
 	<div class="discover-content store-wrapper grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'store' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
+			<p class="empty-profile-text u-margin-top-30">Un no tienes nigun producto <br><br>
+				<a href="/users/specialty/all/page-1">Vende tu primer producto</a>
+			</p>
       <div class="grid store-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
@@ -118,6 +124,9 @@
 	<div class="discover-content followings-wrapper  grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'followings' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
+			<p class="empty-profile-text u-margin-top-30">Un no sigues a ningun artista <br><br>
+				<a href="/users/specialty/all/page-1">descubre y empieza a seguira tu primer artista</a>
+			</p>
       <div class="grid followings-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
@@ -126,6 +135,9 @@
 	<div class="discover-content followers-wrapper  grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'followers' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
+			<p class="empty-profile-text u-margin-top-30">Un no te sigue ningun artista <br><br>
+				<a href="/users/specialty/all/page-1">descubre y empieza a seguira tu primer artista</a>
+			</p>
       <div class="grid followers-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
