--- a/app/views/user/work/add-edit.html
+++ b/app/views/user/work/add-edit.html
@@ -58,9 +58,13 @@
 				<div class="switch u-margin-top-10">
 					<p class="title">Público</p>
 					<span class="value">On</span>
-					<div class="am-Switch-button">
-						<i class="fa fa-bars"></i>
-					</div>
+
+					<input type="checkbox" name="public" id="public" checked/>
+					<label for="public">
+					  <div class="am-Switch-button">
+					  	<i class="fa fa-bars"></i>
+					  </div>
+					</label>
 				</div>
 
 				<button class="button u-margin-top-30" data-color="blue">
