--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -129,7 +129,7 @@
 				<% } %>
 
 				<% if (owner) { %>
-					<div class="edit"><i class="fa fa-pencil-square-o"></i></div>
+					<div class="edit"><i class="bi_editorial-compose"></i></div>
 				<% } %>
 
 				<a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
