remove uppercase of navigation text in discovers

--- a/app/views/pages/collections.html
+++ b/app/views/pages/collections.html
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 			<div class="text">
-				<p class="am-navigation-text uppercase">{{data.filters.currentCategory}}</p>
+				<p class="am-navigation-text">{{data.filters.currentCategory}}</p>
 			</div>
 			<div class="filter right" data-state="closed">
 				<div class="am-Select">
