add c upload image to profile avatar

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -915,17 +915,25 @@ body
 		margin-right 20px
 		position relative
 		min-width 100px
-		i
-			position absolute
-			bottom 0
-			right 0
+		.icon
 			color white
-			font-size 1.5rem
+			position absolute
+			left 50%
+			transform translate(-50%, 0)
+			font-size 1.25em
+			padding 5px
 			cursor pointer
-			display none
-		&:hover
-			i
-				display block
+		// i
+		// 	position absolute
+		// 	bottom 0
+		// 	right 0
+		// 	color white
+		// 	font-size 1.5rem
+		// 	cursor pointer
+		// 	display none
+		// &:hover
+		// 	i
+		// 		display block
 	img
 		width 100px
 		height 100px
