--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -28,6 +28,9 @@
 				<div class="am-Profile-avatar">
 					<div class="img">
 						<img src="{{profile.photo}}">
+						<div class="icon">
+							<i class="bi_tool-camera-b"></i>
+						</div>
 					</div>
 					<div>
 						<p class="name">{{profile.fullname}}</p>
