ease animatino in filters

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1818,7 +1818,7 @@ body
 		position: absolute;
 		z-index: 1;
 		width: 100%;
-		transition: transform linear .5s;
+		transition: transform ease .5s;
 		.am-Filter
 			background-color: white;
 			margin: 10px;
@@ -1838,7 +1838,7 @@ body
 		z-index: 1;
 		width: 100%;
 		right 0
-		transition: transform linear .5s;
+		transition: transform ease .5s;
 		.am-Filter
 			background-color: white;
 			margin: 10px;
